overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,8 @@ body {
   width: 1350px;
   max-width: 100vw;
   margin: 0 auto;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   background-color: #fff;
   display: flex;
   flex-direction: column; }
