--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -50,7 +50,8 @@ body {
   width: 1350px;
   max-width: 100vw;
   margin: 0 auto;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   background-color: $color-white;
   display: flex;
   flex-direction: column;
